fix(bug): fixed logo title, and profile image alignments

--- a/src/app/title/title.component.scss
+++ b/src/app/title/title.component.scss
@@ -34,7 +34,7 @@ h1 {
   @include title-small-screen {
     display: inline-grid;
     grid-template-columns: auto;
-    grid-template-rows: 1fr auto;
+    grid-template-rows: 20vh 1fr;
     justify-items: center;
     align-items: center;
     font-size: 40px;
@@ -50,9 +50,6 @@ h1 {
   border-bottom: solid 2px rgba-secondary-2(0.7);
 
   .logo {
-    align-self: center;
-    justify-self: center;
-    width: 100%;
     height: 100%;
     .logoimg {
       border-radius: 50%;
